# MiniUlTra-LSL

./: README.md
Apps/eegoSports/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  reader.cpp  reader.h
Arduino/Legon_et_al_2014_v2/: Legon_et_al_2014_v2.ino
Arduino/Legon_et_al_2014_v3/: Legon_et_al_2014_v3.ino
Arduino/Legon_et_al__2014/: Legon_et_al__2014.ino
Arduino/PWM/: PWM.ino
Arduino/Serial_Communication_Python/: Serial_Communication_Python.ino
Arduino/ThermocoupleSensor/: ReadSensorData.py  ThermocoupleSensor.ino  test.csv
Arduino/Visual_Evoked_Potential/: Visual_Evoked_Potential.ino
Code/: BCI_Functions.py  EMG_Test2.csv  Main.py  ReceiveData.py
Code/Data Analysis/: Electrophysiological_Analyzer.asv  Electrophysiological_Analyzer.m
Code/Rehamove3/: Main.py  Main_SEP.py  Main_VEP.py  ReceiveData.py
Code/Rehamove3/Data Analysis/: DataAnalysis  Electrophysiological_Analyzer.asv  Electrophysiological_Analyzer.m
Code/src/: AdaptiveFilter_LMS  ArtefactCancellation.py  BCI_Functions.py  Main.py
Code/src/Data Analysis/: Electrophysiological_Analyzer.asv  Electrophysiological_Analyzer.m
Data Analysis/: Electrophysiological_Analyzer.asv  Electrophysiological_Analyzer.m  Electrophysiological_Analyzer_VEP.asv  Electrophysiological_Analyzer_VEP.m
EEG Montage/: EEG32-BIP24-CA-209 (SEP).xlsx  EEG32-BIP24-CA-209.xlsx
pylsl/: .gitignore  LICENSE  MANIFEST.in  README.md  setup.cfg  setup.py
pylsl/.github/workflows/: publish-to-pypi.yml
pylsl/pylsl/: __init__.py  pylsl.py
pylsl/pylsl/examples/: GetTimeCorrection.py  (+10 more)
(+5 files in other folders)
